<resources>
    <string name="app_name">OKU APP</string>
    <string name="information_center">Information Center</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="button">Button</string>
    <string name="cancel">Cancel</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="ForgetPassword">Forget Password</string>
    <string name="community">Community</string>
    <string name="header">Header</string>
    <string name="username">Username :</string>
    <string name="password">Password :</string>
    <string name="leejunxian">LeeJunXian</string>
    <string name="Password">Password</string>
    <string name="plcEmail">diunasing@gmail.com</string>
    <string name="email_address">Email Address:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="people">people</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_your_text">Enter Text</string>
    <string name="bookmark">Bookmark</string>
    <string name="history">History</string>
    <string name="edit">Info</string>
    <string name="info">Info</string>
    <string name="email">Email :</string>
    <string name="user">User</string>
    <string name="phone">Phone :</string>
    <string name="emailicon">EmailIcon</string>
    <string name="submit">Submit</string>
    <string name="BankCard">Bank Card :</string>
    <string name="bankcard">Bank Card :</string>
    <string name="phoneicon">Phone Icon</string>
    <string name="forgetpassword">Forget Password</string>

    <string name="profilepicture">Profile Pciture</string>
    <string name="account_informations">Account Information</string>
    <string name="phone_number">Phone Number :</string>
    <string name="comfirm">Comfirm</string>
    <string name="add">add</string>
    <string name="search">Search</string>
    <string name="recent_post">Recent Post</string>
    <string name="most_view">Most View</string>

    <string name="upload_image">Upload Image</string>
    <string name="upload">Upload</string>


    <string name="write_your_post_here">Write Your Post Here …</string>
    <string name="write_your_subject_here">Write Your Subject Here …</string>
    <string name="clear_history">Clear History</string>


    <string name="delete">Delete</string>


    <string name="subject">subject</string>
    <string name="view_image">View image</string>
    <string name="text">text</string>
    <string name="sample_card_descriptions">Sample Card Descriptions</string>
    <string name="sample_card_title">Sample Card Title</string>
    <string name="title_activity_location_maps">Map</string>

    <string-array name="month">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="year">
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
    </string-array>
</resources>